--- a/index.html
+++ b/index.html
@@ -2,23 +2,23 @@
 <html>
 
 <head>
-    <meta charset="utf-8" />
+    <meta charset="utf-8">
     <title>The Watches</title>
-    <meta name="author" content="" />
-    <meta name="description" content="" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link href="style.css" rel="stylesheet" />
+    <meta name="author" content="">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="style.css" rel="stylesheet">
     <script src="script.js" defer></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Great+Vibes&display=swap"
-        rel="stylesheet" />
-    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet" />
+        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -30,9 +30,9 @@
         </div>
 
         <div id="nav_logo">
-            <a href=""><img class="logo" src="images/home_logo.png" alt="home logo" /></a>
-            <a href=""><img class="logo" src="images/account_logo.png" alt="account logo" /></a>
-            <a href=""><img class="logo" src="images/cart_logo.png" alt="cart logo" /></a>
+            <a href=""><img class="logo" src="images/home_logo.png" alt="home logo"></a>
+            <a href=""><img class="logo" src="images/account_logo.png" alt="account logo"></a>
+            <a href=""><img class="logo" src="images/cart_logo.png" alt="cart logo"></a>
         </div>
     </nav>
 
@@ -52,17 +52,17 @@
                 <ul>
                     <li>
                         <div>
-                            <img src="images/montre2.png" alt="icone" class="montre-cart" />
+                            <img src="images/montre2.png" alt="icone" class="montre-cart">
                         </div>
                         <p>50$</p>
                         <span>
                             <button>-</button>
-                            <input type="number" min="1" max="99" />
+                            <input type="number" min="1" max="99">
                             <button>+</button>
                         </span>
                         <div>
                             <button class="btn">
-                                <img src="images/delete.png" />
+                                <img src="images/delete.png">
                             </button>
                         </div>
                     </li>
@@ -73,21 +73,21 @@
                 <p>Total : 00$</p>
             </footer>
             <div class="payement">
-                <img src="images/cb_icon.png" alt="cb_icon" />
-                <img src="images/paypal_icon_2.png" alt="cb_icon" />
+                <img src="images/cb_icon.png" alt="cb_icon">
+                <img src="images/paypal_icon_2.png" alt="cb_icon">
             </div>
         </div>
     </main>
 
     <footer>
         <a href="" target="blank">
-            <img class="logo" src="./images/instagram_logo.png" alt="instagram" /></a>
+            <img class="logo" src="./images/instagram_logo.png" alt="instagram"></a>
         <a href="" target="blank">
-            <img class="logo" src="./images/facebook_logo.png" alt="facebook" /></a>
+            <img class="logo" src="./images/facebook_logo.png" alt="facebook"></a>
         <a href="" target="blank">
-            <img class="logo" src="./images/twitter_logo.png" alt="twitter" /></a>
+            <img class="logo" src="./images/twitter_logo.png" alt="twitter"></a>
         <a href="" target="blank">
-            <img class="logo" src="./images/youtube_logo.png" alt="youtube" /></a>
+            <img class="logo" src="./images/youtube_logo.png" alt="youtube"></a>
     </footer>
 </body>
 
