add lang in code

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 
 <head>
     <meta charset="utf-8">
@@ -62,7 +62,7 @@
                         </span>
                         <div>
                             <button class="btn">
-                                <img src="images/delete.png">
+                                <img src="images/delete.png" alt="icone">
                             </button>
                         </div>
                     </li>
