--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h2>Cart</h2>
         <div id="cart">
             <header>
-                <div></div>
+                <div>Name</div>
                 <span>Price</span>
                 <span>Quantity</span>
                 <div></div>
