test totalPrice function and failed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 </ul>
             </div>
             <footer>
-                <p>Total : 00$</p>
+                <p id="total_in_cart">Total : 00$</p>
             </footer>
             <div class="payement">
                 <img src="images/cb_icon.png" alt="cb_icon">
