--- a/article5.html
+++ b/article5.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
-    <!-- <script src="script.js" defer></script> -->
+    <script src="article5.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -22,6 +22,10 @@
 </head>
 
 <body>
+    <div class="containerModal">
+        <div class="overlay" onclick="modalTrigger()"></div>
+        <div class="modal"></div>
+    </div>
     <nav>
         <div></div>
         <div id="brandname">
@@ -37,8 +41,17 @@
     </nav>
 
     <div class="mainDiv">
-
-        <img src="images/montre5.png" alt="A super Rolexx watch that's awesome and that you should buy">
+            <div class="watchesPhotos">
+                <img onclick="showThisPic(0)" src="images/bulgarie1.webp"
+                    alt="A super Louis Biddon watch that's awesome and that you should buy">
+                <img onclick="showThisPic(1)" src="images/bulgarie2.webp"
+                    alt="A super Louis Biddon watch that's awesome and that you should buy">
+                <img onclick="showThisPic(2)" src="images/bulgarie3.webp"
+                    alt="A super Louis Biddon watch that's awesome and that you should buy">
+            </div>
+            <div id="currentPhoto">
+    
+            </div>
         <div>
             <h3>Louis Biddon, une montre qu'elle vous va bien.</h3>
             <p>Avec un design simple mais élégant, et son bracelet sophistiqué, la Louis Biddon est la montre parfaite
