add translation FR

--- a/index.html
+++ b/index.html
@@ -38,32 +38,32 @@
 
     <main>
         <div>
-        <h2>Our products</h2>
-        <div id="products">
-        </div>
+            <h2>Notre sélection du mois : </h2>
+            <div id="products">
+            </div>
         </div>
         <div class="cart_container">
-            <h2 id="go_to_cart">Cart</h2>
-        <div id="cart">
-            <header>
-                <div>Name</div>
-                <span>Price</span>
-                <span>Quantity</span>
-                <div></div>
-            </header>
-            <div class="grande">
-                <ul>
-                </ul>
-            </div>
-            <footer>
-                <p id="total_in_cart">Total : 00$</p>
-            </footer>
-            <div class="payement">
-                <img src="images/cb_icon.png" alt="cb_icon">
-                <img src="images/paypal_icon_2.png" alt="cb_icon">
+            <h2 id="go_to_cart">Panier</h2>
+            <div id="cart">
+                <header>
+                    <div>Nom</div>
+                    <span>Prix</span>
+                    <span>Quantité</span>
+                    <div></div>
+                </header>
+                <div class="grande">
+                    <ul>
+                    </ul>
+                </div>
+                <footer>
+                    <p id="total_in_cart">Total : 00$</p>
+                </footer>
+                <div class="payement">
+                    <img src="images/cb_icon.png" alt="cb_icon">
+                    <img src="images/paypal_icon_2.png" alt="cb_icon">
+                </div>
             </div>
         </div>
-    </div>
     </main>
 
     <footer>
