add images / fixed code

--- a/home.html
+++ b/home.html
@@ -49,17 +49,7 @@
                         <img src="images/montre2.png" alt="">
                     </div>
                     <div class="slide">
-                        <img src="images/montre3.png" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="images/montre4.png" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="images/montre5.png"
-                            alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="images/montre6.png" alt="">
+                        <img src="images/ho" alt="">
                     </div>
                 </div>
             </div>
