fix cart... as much as possible

--- a/index.html
+++ b/index.html
@@ -46,9 +46,11 @@
             <h2 id="go_to_cart">Panier</h2>
             <div id="cart">
                 <header>
-                    <div>Nom</div>
+                    <div></div>
+                    <span>Nom</span>
                     <span>Prix</span>
                     <span>Quantité</span>
+                    <div></div>
                     <div></div>
                 </header>
                 <div class="grande">
