fixed home page

--- a/home.html
+++ b/home.html
@@ -38,18 +38,19 @@
 
 
     <section id="home">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores quod sint eveniet iusto itaque. Fugiat assumenda eaque impedit, beatae architecto vel natus nobis cumque ex commodi, omnis nam adipisci! Libero quia perferendis eligendi inventore reprehenderit dolorem doloribus modi earum quibusdam qui, magnam, autem consectetur, quod eaque! Aperiam obcaecati qui perspiciatis?</p>
-            <button><a href="index.html">Shop</a></button>
+            <p>Venez acheter nos SUPER montre de luxe en echange on vous offre un dogan. Vous verrait nos super montre plus cas cliquer sur notre bouton boutique ci-dessous!!!!!</p>
+            <button><a href="index.html">Boutique</a></button>
+            <p class="discret">on vas prendre tout vos sous</p>
             <div class="slider">
                 <div class="slides">
                     <div class="slide">
-                        <img src="images/montre1.png" alt="">
+                        <img src="home-images/Girard-Perregaux-Laureato-bleudial.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="images/montre2.png" alt="">
+                        <img src="home-images/Ces-marques-de-luxe-qui-veulent-aussi-leurs-montres-connectées-grande.jpg" alt="">
                     </div>
                     <div class="slide">
-                        <img src="images/ho" alt="">
+                        <img src="home-images/banniererolex.png" alt="">
                     </div>
                 </div>
             </div>
