--- a/article5.html
+++ b/article5.html
@@ -34,24 +34,24 @@
         </div>
 
         <div id="nav_logo">
-            <a href=""><img class="logo" src="images/home_logo.png" alt="home logo"></a>
+            <a href="home.html"><img class="logo" src="images/home_logo.png" alt="home logo"></a>
             <a href=""><img class="logo" src="images/account_logo.png" alt="account logo"></a>
-            <a href=""><img class="logo" src="images/cart_logo.png" alt="cart logo"></a>
+            <a href="index.html"><img class="logo" src="images/cart_logo.png" alt="cart logo"></a>
         </div>
     </nav>
 
     <div class="mainDiv">
-            <div class="watchesPhotos">
-                <img onclick="showThisPic(0)" src="images/bulgarie1.webp"
-                    alt="A super Louis Biddon watch that's awesome and that you should buy">
-                <img onclick="showThisPic(1)" src="images/bulgarie2.webp"
-                    alt="A super Louis Biddon watch that's awesome and that you should buy">
-                <img onclick="showThisPic(2)" src="images/bulgarie3.webp"
-                    alt="A super Louis Biddon watch that's awesome and that you should buy">
-            </div>
-            <div id="currentPhoto">
-    
-            </div>
+        <div class="watchesPhotos">
+            <img onclick="showThisPic(0)" src="images/bulgarie1.webp"
+                alt="A super Louis Biddon watch that's awesome and that you should buy">
+            <img onclick="showThisPic(1)" src="images/bulgarie2.webp"
+                alt="A super Louis Biddon watch that's awesome and that you should buy">
+            <img onclick="showThisPic(2)" src="images/bulgarie3.webp"
+                alt="A super Louis Biddon watch that's awesome and that you should buy">
+        </div>
+        <div id="currentPhoto">
+
+        </div>
         <div>
             <h3>Louis Biddon, une montre qu'elle vous va bien.</h3>
             <p>Avec un design simple mais élégant, et son bracelet sophistiqué, la Louis Biddon est la montre parfaite
