--- a/article2.html
+++ b/article2.html
@@ -34,9 +34,9 @@
         </div>
 
         <div id="nav_logo">
-            <a href=""><img class="logo" src="images/home_logo.png" alt="home logo"></a>
+            <a href="home.html"><img class="logo" src="images/home_logo.png" alt="home logo"></a>
             <a href=""><img class="logo" src="images/account_logo.png" alt="account logo"></a>
-            <a href=""><img class="logo" src="images/cart_logo.png" alt="cart logo"></a>
+            <a href="index.html"><img class="logo" src="images/cart_logo.png" alt="cart logo"></a>
         </div>
     </nav>
 
@@ -50,7 +50,7 @@
                 alt="A super Patekk Filippe watch that's awesome and that you should buy">
         </div>
         <div id="currentPhoto">
-            
+
         </div>
         <div>
             <h3>Patekk Filippe, une montre qu'elle vous va bien.</h3>
