--- a/article6.html
+++ b/article6.html
@@ -34,9 +34,9 @@
         </div>
 
         <div id="nav_logo">
-            <a href=""><img class="logo" src="images/home_logo.png" alt="home logo"></a>
+            <a href="home.html"><img class="logo" src="images/home_logo.png" alt="home logo"></a>
             <a href=""><img class="logo" src="images/account_logo.png" alt="account logo"></a>
-            <a href=""><img class="logo" src="images/cart_logo.png" alt="cart logo"></a>
+            <a href="index.html"><img class="logo" src="images/cart_logo.png" alt="cart logo"></a>
         </div>
     </nav>
 
