--- a/index.html
+++ b/index.html
@@ -30,9 +30,12 @@
         </div>
 
         <div id="nav_logo">
+            <input type="text">
+            <button onclick="showInput()"><img class="logo" src="images/loupeREDIM.png" alt="research button"></button>
             <a href="index.html"><img class="logo" src="images/home_logo.png" alt="home logo"></a>
             <a href=""><img class="logo" src="images/account_logo.png" alt="account logo"></a>
             <img class="logo" id="cart_logo" src="images/cart_logo.png" alt="cart logo">
+
         </div>
     </nav>
 
