responsive and logo cart incrementing

--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <div id="nav_logo">
             <a href="index.html"><img class="logo" src="images/home_logo.png" alt="home logo"></a>
             <a href=""><img class="logo" src="images/account_logo.png" alt="account logo"></a>
-            <img class="logo" id="cart_logo" src="images/cart_logo.png" alt="cart logo">
+            <img id="cart_logo" src="images/cart_logo.png" alt="cart logo">
+            <span id="number_of_item_in_cart"></span>
         </div>
     </nav>
 
@@ -67,13 +68,13 @@
     </main>
 
     <footer>
-        <a href="" target="blank">
+        <a href="https://www.instagram.com/watchesdotcom/" target="blank">
             <img class="logo" src="./images/instagram_logo.png" alt="instagram"></a>
-        <a href="" target="blank">
+        <a href="https://www.facebook.com/TheWatchesMagazine/" target="blank">
             <img class="logo" src="./images/facebook_logo.png" alt="facebook"></a>
-        <a href="" target="blank">
+        <a href="https://twitter.com/wos_officialuk" target="blank">
             <img class="logo" src="./images/twitter_logo.png" alt="twitter"></a>
-        <a href="" target="blank">
+        <a href="https://www.youtube.com/watch?v=NaTCsF0oFcs" target="blank">
             <img class="logo" src="./images/youtube_logo.png" alt="youtube"></a>
     </footer>
 </body>
