fix id on input

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </div>
 
         <div id="nav_logo">
-            <input type="text" onkeyup="filterInput()">
+            <input id="searchBar" type="text" onkeyup="filterInput()">
             <button onclick="showInput()"><img class="logo" src="images/loupeREDIM.png" alt="research button"></button>
             <a href="index.html"><img class="logo" src="images/home_logo.png" alt="home logo"></a>
             <a href=""><img class="logo" src="images/account_logo.png" alt="account logo"></a>
