fixed home page

--- a/cart.html
+++ b/cart.html
@@ -44,39 +44,37 @@
             <img src="images/bg2.jpg" alt="">
         </div>
         <div class="panier">
-            <form action="" method="get">
-                <div>
-                  <label for="name">Enter your name: </label>
-                  <input type="text" name="name" class="form-panier">
-                </div>
-                <div>
-                    <label for="username">Enter your Prénom: </label>
-                    <input type="text" name="name" class="form-panier">
-                  </div>
-                  <div>
-                  <label for="email">Enter your email: </label>
-                  <input type="email" name="email" class="form-panier">
-                </div>
-                  <div>
+            <form action="" method="get" class="qcm">
+                <div class="form-panier">
+                    <label for="name">Enter your sexe : </label>
+                    <label for="name">Enter your name : </label>
+                    <label for="username">Enter your Prénom : </label>
+                    <label for="email">Enter your email : </label>
                     <label for="adress">Enter your Adresse : </label>
-                    <input type="text" name="name" class="form-panier">
-                  </div>
-                <div>
-                  <input type="submit" value="Subscribe!" class="form-panier">
                 </div>
-              </form>
+                <div class="form-panier">
+                    <select name="" id=""></select>
+                    <input type="text" name="name">
+                    <input type="text" name="name">
+                    <input type="text" name="name">
+                    <input type="email" name="email">
+                </div>
+            </form>
+            ,<div class="form-panier" id="panier-spe">
+                <input type="submit" value="Subscribe!" class="form-panier">
+            </div>
         </div>
-    <div class="panier" id="panier-spe">
-        <div>
-            <p>Total TTC : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, laudantium?</p> 
-            <p>livraison : Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, id.</p>
-        </div>
-         
-        <div class="buy"><button>Payement !</button></div>
-    </div>
-</article>
+        <div class="panier" id="panier-spe">
+            <div>
+                <p>Total TTC : Lorem ipsum, dolor sit amet consectetur adipisicing elit. Recusandae, laudantium?</p>
+                <p>livraison : Lorem, ipsum dolor sit amet consectetur adipisicing elit. Laborum, id.</p>
+            </div>
 
-    
+            <div class="buy"><button>Payement !</button></div>
+        </div>
+    </article>
+
+
 
     <footer>
         <a href="https://www.instagram.com/watchesdotcom/" target="blank">
