--- a/cart.html
+++ b/cart.html
@@ -44,22 +44,28 @@
             <img src="images/bg2.jpg" alt="">
         </div>
         <div class="panier">
-            <form action="" method="get" class="qcm">
-                <div class="form-panier">
-                    <label for="name">Enter your sexe : </label>
-                    <label for="name">Enter your name : </label>
-                    <label for="username">Enter your Prénom : </label>
-                    <label for="email">Enter your email : </label>
-                    <label for="adress">Enter your Adresse : </label>
+            <form action="" method="get" class="form">
+                <div class="form-example">
+                  <label for="name">Enter your name: </label>
+                  <input type="text" name="name">
                 </div>
-                <div class="form-panier">
-                    <select name="" id=""></select>
-                    <input type="text" name="name">
-                    <input type="text" name="name">
-                    <input type="text" name="name">
-                    <input type="email" name="email">
+                <div class="form-example">
+                  <label for="email">Enter your email: </label>
+                  <input type="email" name="email">
                 </div>
-            </form>
+                <div class="form-example">
+                  <label for="email">Enter your adress : </label>
+                  <input type="email" name="email">
+                </div>
+                <div class="form-example">
+                  <label for="email">Enter your prénom: </label>
+                  <input type="email" name="email">
+                </div>
+                <div class="form-example">
+                  <label for="email">Enter your birthday: </label>
+                  <input type="email" name="email">
+                </div>
+              </form>
             ,<div class="form-panier" id="panier-spe">
                 <input type="submit" value="Subscribe!" class="form-panier">
             </div>
