add article 7 8 9 html & js

--- a/article8.html
+++ b/article8.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
-    <script src="article3.js" defer></script>
+    <script src="article8.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,23 +42,23 @@
 
     <div class="mainDiv">
         <div class="watchesPhotos">
-            <img onclick="showThisPic(0)" src="images/cartier1.webp"
-                alt="A super Pas de Cartier watch that's awesome and that you should buy">
-            <img onclick="showThisPic(1)" src="images/cartier2.webp"
-                alt="A super Pas de Cartier watch that's awesome and that you should buy">
-            <img onclick="showThisPic(2)" src="images/cartier3.webp"
-                alt="A super Pas de Cartier watch that's awesome and that you should buy">
+            <img onclick="showThisPic(0)" src="images/RolexBlue1.webp"
+                alt="A super Rolexx watch that's awesome and that you should buy">
+            <img onclick="showThisPic(1)" src="images/RolexBlue2.webp"
+                alt="A super Rolexx watch that's awesome and that you should buy">
+            <img onclick="showThisPic(2)" src="images/RolexBlue3.webp"
+                alt="A super Rolexx watch that's awesome and that you should buy">
         </div>
         <div id="currentPhoto">
 
         </div>
         <div>
-            <h3>Pas de Cartier, une montre qu'elle vous va bien.</h3>
-            <p>Avec un design simple mais élégant, et son bracelet sophistiqué, la Pas de Cartier est la montre parfaite
-                pour étaler votre richesse, et faire mourir d'envie le citoyen moyen.
-                <br>Vous savez ce qu'on dit : avoir une Pas de Cartier, c'est montrer sa réussite. Qu'attendez vous ?
+            <h3>Rolexx, une montre qu'elle vous va bien.</h3>
+            <p>Avec un design simple mais élégant, et son bracelet sophistiqué, la Rolexx est la montre parfaite pour
+                étaler votre richesse, et faire mourir d'envie le citoyen moyen.
+                <br>Vous savez ce qu'on dit : avoir une Rolexx, c'est montrer sa réussite. Qu'attendez vous ?
             </p>
-            <p>Prix : 7499 $</p><a href="index.html"><button>J'en prends une !</button></a>
+            <p>Prix : 3199 $</p><a href="index.html"><button>J'en prends une !</button></a>
         </div>
     </div>
 
