--- a/article9.html
+++ b/article9.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
-    <script src="article3.js" defer></script>
+    <script src="article9.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -42,11 +42,11 @@
 
     <div class="mainDiv">
         <div class="watchesPhotos">
-            <img onclick="showThisPic(0)" src="images/cartier1.webp"
+            <img onclick="showThisPic(0)" src="images/CartierLaRotonde1.webp"
                 alt="A super Pas de Cartier watch that's awesome and that you should buy">
-            <img onclick="showThisPic(1)" src="images/cartier2.webp"
+            <img onclick="showThisPic(1)" src="images/CartierLaRotonde2.webp"
                 alt="A super Pas de Cartier watch that's awesome and that you should buy">
-            <img onclick="showThisPic(2)" src="images/cartier3.webp"
+            <img onclick="showThisPic(2)" src="images/CartierLaRotonde3.webp"
                 alt="A super Pas de Cartier watch that's awesome and that you should buy">
         </div>
         <div id="currentPhoto">
@@ -58,7 +58,7 @@
                 pour étaler votre richesse, et faire mourir d'envie le citoyen moyen.
                 <br>Vous savez ce qu'on dit : avoir une Pas de Cartier, c'est montrer sa réussite. Qu'attendez vous ?
             </p>
-            <p>Prix : 7499 $</p><a href="index.html"><button>J'en prends une !</button></a>
+            <p>Prix : 6499 $</p><a href="index.html"><button>J'en prends une !</button></a>
         </div>
     </div>
 
