change desktop display with and without cart

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         </div>
     </nav>
 
-    <main>
+    <main class="without_cart">
         <div>
             <h2>Notre sélection du mois : </h2>
             <div id="products">
