--- a/article6.html
+++ b/article6.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="style.css" rel="stylesheet">
-    <script src="article6.js" defer></script>
+    <script src="article.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -19,6 +19,22 @@
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Great+Vibes&display=swap"
         rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@200&display=swap" rel="stylesheet">
+    <script>
+        const watchesPhotos = [
+            {
+                src: "images/vélux1.webp",
+                alt: "A super Vélux watch that's awesome and that you should buy"
+            },
+            {
+                src: "images/vélux2.webp",
+                alt: "A super Vélux watch that's awesome and that you should buy"
+            },
+            {
+                src: "images/vélux3.webp",
+                alt: "A super Vélux watch that's awesome and that you should buy"
+            }
+        ];
+    </script>
 </head>
 
 <body>
