--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <div id="nav_logo">
             <input id="searchBar" type="text" onkeyup="filterInput()">
             <button onclick="showInput()"><img class="logo" src="images/loupeREDIM.png" alt="research button"></button>
-            <a href="index.html"><img class="logo" src="images/home_logo.png" alt="home logo"></a>
+            <a href="home.html"><img class="logo" src="images/home_logo.png" alt="home logo"></a>
             <a href=""><img class="logo" src="images/account_logo.png" alt="account logo"></a>
             <img id="cart_logo" src="images/cart_logo.png" alt="cart logo">
             <span id="number_of_item_in_cart"></span>
