change some text on homepage

--- a/home.html
+++ b/home.html
@@ -38,22 +38,26 @@
 
 
     <section id="home">
-            <p>Venez acheter nos SUPER montre de luxe en echange on vous offre un dogan. Vous verrait nos super montre plus cas cliquer sur notre bouton boutique ci-dessous !!!!!</p>
-            <button><a href="index.html">Boutique</a></button>
-            <p class="discret">on vas prendre tout vos sous</p>
-            <div class="slider">
-                <div class="slides">
-                    <div class="slide">
-                        <img src="home-images/Girard-Perregaux-Laureato-bleudial.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="home-images/Ces-marques-de-luxe-qui-veulent-aussi-leurs-montres-connectées-grande.jpg" alt="">
-                    </div>
-                    <div class="slide">
-                        <img src="home-images/banniererolex.png" alt="">
-                    </div>
+        <p>Venez acheter nos SUPER montres de luxe ! Pour chaque montre achetée, on vous offre un DOGAN !!! <br>Pour
+            voir
+            nos
+            INCROYABLES montres, cliquez sur notre bouton BOUTIQUE ci-dessous !!!</p>
+        <button><a href="index.html">Boutique</a></button>
+        <p class="discret">On va prendre tout vos sous !</p>
+        <div class="slider">
+            <div class="slides">
+                <div class="slide">
+                    <img src="home-images/Girard-Perregaux-Laureato-bleudial.jpg" alt="">
+                </div>
+                <div class="slide">
+                    <img src="home-images/Ces-marques-de-luxe-qui-veulent-aussi-leurs-montres-connectées-grande.jpg"
+                        alt="">
+                </div>
+                <div class="slide">
+                    <img src="home-images/banniererolex.png" alt="">
                 </div>
             </div>
+        </div>
     </section>
 
 
