update text on home page

--- a/home.html
+++ b/home.html
@@ -23,23 +23,23 @@
 
 <body>
     <nav>
-        
+
         <div id="brandname">
             <h1>The Watches</h1>
             <h5>Swiss made &reg;</h5>
         </div>
 
-        
+
     </nav>
 
 
     <section id="home">
-        <p>Venez acheter nos SUPER montres de luxe ! Pour chaque montre achetée, on vous offre un DOGAN !!! <br>Pour
+        <p>Watches&reg;, une montre qui ne se cache pas <br>Pour
             voir
             nos
             INCROYABLES montres, cliquez sur notre bouton BOUTIQUE ci-dessous !!!</p>
         <button><a href="index.html">Boutique</a></button>
-        <p class="discret">On va prendre tout vos sous !</p>
+        <p class="discret">"Une montre Watches&reg;, sans discrétion" </p>
         <div class="slider">
             <div class="slides">
                 <div class="slide">
