update on text on home.html

--- a/home.html
+++ b/home.html
@@ -34,7 +34,7 @@
 
 
     <section id="home">
-        <p>Watches&reg;, une montre qui ne se cache pas <br>Pour
+        <p>Une montre The Watches&reg; - c'est une montre qui ne se cache pas<br>Pour
             voir
             nos
             INCROYABLES montres, cliquez sur notre bouton BOUTIQUE ci-dessous !!!</p>
